# loom

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README_EN.md  opencode.jsonc  skills-lock.json
.agents/: lessons.md
.agents/orchestrator/: BRIEFING.md  ORIGINAL_REQUEST.md  categorization_env_spec.md  context.md  global_cli_spec.md  gui_dashboard_spec.md  handoff.md  parent_spec.md  plan.md  progress.md  scanner_importer_spec.md  setup_persistence_spec.md  template_process_spec.md  validation_hardening_spec.md
.github/workflows/: deploy-site.yml  release.yml
.opencode/agents/: change-impact-analyzer.md  code-quality-reviewer.md  code-structure-analyzer.md  coding-implementer.md  delivery-summarizer.md  dispatch-orchestrator.md  execution-planner.md  feature-pipeline-manager.md  information-gatherer.md  problem-fix-pipeline.md  refactoring-pipeline.md  research-pipeline-orchestrator.md  root-cause-analyzer.md  test-verification-executor.md
.opencode/tools/: handoff-check.ts  handoff-claim.ts  handoff-create.ts  handoff-list.ts  handoff-update.ts
crates/cli/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/storage/: manager.rs  mod.rs  models.rs  tests.rs
crates/gui/src-tauri/: Cargo.toml  loom-updater.key.pub  loom.key.pub  tauri.conf.json
crates/gui/src-tauri/capabilities/: default.json
crates/gui/src-tauri/src/: agent_monitor.rs  main.rs  pty.rs
e2e/: package.json
e2e/src/: cli.test.ts  gui.test.ts
site/: package-lock.json
specs/011-theme-settings/: README.md
specs/012-category-enhancements-fonts/: README.md
specs/013-command-override/: README.md
specs/025-gray-eye-care-theme/: README.md
specs/026-sidebar-resize-collapse/: README.md
specs/027-vertical-split-dual-view/: README.md
specs/028-sidebar-hover-mode/: README.md
specs/029-settings-page-decoupling/: README.md
specs/030-error-boundary-error-handling/: README.md
specs/031-production-rust-hardening/: README.md
specs/032-frontend-code-cleanup/: README.md
specs/033-bundle-optimization/: README.md
specs/034-code-deduplication/: README.md
(+86 files in other folders)
