[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
    "crates/gui/src-tauri"
]

[workspace.package]
version = "0.2.19"
edition = "2021"


# Centralized dependency management
[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.22.0", features = ["v4", "serde"] }
directories = "5.0.1"
thiserror = "1.0.69"
tempfile = "3.27.0"
