[package]
name = "loom-gui"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
loom-core = { path = "../../core" }
rfd = "0.17.2"
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { version = "2.0.0", features = ["tray-icon", "image-png"] }
tauri-plugin-single-instance = "2.0.0"
tauri-plugin-autostart = "2.0.0"
tauri-plugin-updater = "2.0.0"
tauri-plugin-process = "2.0.0"
tauri-plugin-global-shortcut = "2.0.0"
portable-pty = "0.8.0"
winapi = { version = "0.3.9", features = [
  "jobapi2",
  "processthreadsapi",
  "winnt",
  "handleapi",
  "imm",
  "windef",
  "wingdi",
  "winuser",
] }
raw-window-handle = "0.6.2"
which = "6.0.0"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
